# balancing_robot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  main.c
src/communication/: comm_bus.c  comm_bus.h  i2c.c  i2c.h  i2c_interface.h  uart.c  uart.h
src/control/: kalman_filter.h
src/imu/: imu.c  imu.h  imu_interface.c  mpu6050.c  mpu6050.h
src/log/: log.c  log.h
src/motor/: motor.c  motor.h
src/robot/: robot.c  robot.h
test/: CMakeLists.txt  statistics.py  test_main.cpp
